--- a/GVGAI/bin/.gitignore
+++ b/GVGAI/bin/.gitignore
@@ -1,12 +1,16 @@
 /DontUnderestimateUchiha/
+/core/
 /kkunan/
+/oneclickRunFromJavaClient.bat
+/oneclickRunFromJavaClient.sh
+/ontology/
+/qlearning/
 /sampleLearner/
 /sampleRandom/
 /serialization/
-/utils/
-/core/
-/ontology/
-/qlearning/
+/source_list.txt
+/testServer.sh
 /testing/
 /tools/
 /tracks/
+/utils/
